# llm-lab

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: Cargo.toml
examples/src/: ch02.rs  lib.rs
listings/: Cargo.toml
listings/src/: ch02.rs
macros/: Cargo.toml
macros/src/: lib.rs  metadata.rs
types/: Cargo.toml
types/src/: lib.rs
