[workspace]
resolver = "2"

members = ["cli", "examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Rust (candle) code for Build a LLM From Scratch by Sebastian Raschka"
repository = "https://github.com/safeforge/llm-lab"
keywords = ["machine-learning", "llms", "gpt"]
categories = ["science"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11.0"
log = "0.4"
