[workspace]
resolver = "2"

members = ["cli", "examples", "listings", "macros", "types"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Rust (candle) code for Build a LLM From Scratch by Sebastian Raschka"
repository = "https://github.com/safeforge/llm-lab"
keywords = ["machine-learning", "llms", "gpt"]
categories = ["science"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
clap = { version = "4.5.35", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11.8"
fancy-regex = "0.14.0"
log = "0.4"
reqwest = { version = "0.12.15", features = ["blocking"] }
