[package]
name = "examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
listings = { path = "../listings" }
macros = { path = "../macros" }
types = { path = "../types" }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
