[package]
name = "listings"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
fancy-regex = { workspace = true }
reqwest = { workspace = true }
